--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
 				 <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://twitter.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630ca7e45bd5c.webp" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630d80afd343c.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>Twitter</strong></a>
 				   <p class="overflowClip_2">Twitter. It's what's happening</p>
@@ -819,7 +819,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.lanzou.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2021/01/15/5ccf93609363f.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630d80ae5c900.png" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>蓝奏云</strong></a>
 					   <p class="overflowClip_2">来这里，下载无限制，无验证码，畅快淋漓尽致！</p>
@@ -1081,6 +1081,50 @@
 			 </div>
 			</div>
 		   </div>
+			 <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.acfun.cn/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630d80ac0519b.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>AcFun</strong></a>
+				   <p class="overflowClip_2">认真你就输啦 (・ω・)ノ- ( ゜- ゜)つロ</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.douyin.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630d80ac051d7.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>抖音</strong></a>
+				   <p class="overflowClip_2">记录美好生活</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.kuaishou.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630d80ad9d17a.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>快手</strong></a>
+				   <p class="overflowClip_2">拥抱每一种生活</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://listen1.github.io/listen1/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630d80af20447.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>Listen 1</strong></a>
+				   <p class="overflowClip_2">One for all free music in china</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
 		 <div class="col-sm-3">
 			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://y.qq.com/&quot;,&quot;_blank&quot;)" >
 			 <div class="xe-comment-entry">
@@ -1825,17 +1869,17 @@
 			  </div>
 			 </div>
 			</div>
-			<div class="col-sm-3">
-			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.speedpan.com/&quot;,&quot;_blank&quot;)" >
-			  <div class="xe-comment-entry">
-			   <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c806140cd4.png" class="img-circle" width="40" /></a>
-			   <div class="xe-comment">
-				<a href="#" class="xe-user-name overflowClip_1"><strong>速盘</strong></a>
-				<p class="overflowClip_2">免登录，自动查询提取码，极速的度盘下载工具</p>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://hipc.cn/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630d80acdf601.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>HiPC</strong></a>
+				   <p class="overflowClip_2">你电脑的移动助手</p>
+				  </div>
+				 </div>
+				</div>
 			   </div>
-			  </div>
-			 </div>
-			</div>
 			<div class="col-sm-3">
 			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://justgetflux.com/&quot;,&quot;_blank&quot;)" >
 			  <div class="xe-comment-entry">
@@ -2801,17 +2845,17 @@
 			  </div>
 			 </div>
 			</div>
-			<div class="col-sm-3">
-			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://www.usoer.com/&quot;,&quot;_blank&quot;)" >
-			  <div class="xe-comment-entry">
-			   <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0cb38ae83.ico" class="img-circle" width="40" /></a>
-			   <div class="xe-comment">
-				<a href="#" class="xe-user-name overflowClip_1"><strong>优搜导航</strong></a>
-				<p class="overflowClip_2">互联网从业者的工具网址导航</p>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.haipc.cn/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630d80acdf601.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>嗨PC主页</strong></a>
+				   <p class="overflowClip_2">轻快上网嗨PC</p>
+				  </div>
+				 </div>
+				</div>
 			   </div>
-			  </div>
-			 </div>
-			</div>
 			<div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yunyingdog.cn/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
