--- a/index.html
+++ b/index.html
@@ -1516,7 +1516,7 @@
 		<div class="col-sm-3">
 		  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.epicgames.com/&quot;,&quot;_blank&quot;)" "bigesj.com">
 		   <div class="xe-comment-entry">
-			<a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c83ed5a5.ico" class="img-circle" width="40" /></a>
+			<a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630daca85e359.png" class="img-circle" width="40" /></a>
 			<div class="xe-comment">
 			 <a href="#" class="xe-user-name overflowClip_1"><strong>Epic</strong></a>
 			 <p class="overflowClip_2">Epic游戏商城致力于为玩家提供出色的游戏，并为游戏开发者提供公平的交易。</p>
