--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://aliyundrive.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c746e3c3.jpg" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcdf92f1c9.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>阿里云盘</strong></a>
 				   <p class="overflowClip_2">基于阿里云多年技术沉淀，为用户提供更优异的个人云体验</p>
@@ -319,7 +319,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://pan.baidu.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c78114f7.jpg" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcdff92272.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>百度网盘</strong></a>
 				   <p class="overflowClip_2">百度网盘，让美好永远陪伴</p>
@@ -330,7 +330,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://mail.qq.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c9d0bd3f.jpg" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcea5254a0.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>QQ邮箱</strong></a>
 				   <p class="overflowClip_2">QQ邮箱，常联系！</p>
@@ -830,7 +830,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://pan.baidu.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c78114f7.jpg" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcdff92272.png" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>百度网盘</strong></a>
 					   <p class="overflowClip_2">百度网盘，让美好永远陪伴</p>
@@ -841,7 +841,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://aliyundrive.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c746e3c3.jpg" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcdf92f1c9.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>阿里云盘</strong></a>
 				   <p class="overflowClip_2">基于阿里云多年技术沉淀，为用户提供更优异的个人云体验</p>
@@ -852,7 +852,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://mail.qq.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c9d0bd3f.jpg" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcea5254a0.png" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>QQ邮箱</strong></a>
 					   <p class="overflowClip_2">QQ邮箱，常联系！</p>
@@ -1564,6 +1564,50 @@
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>网易UU加速器</strong></a>
 				   <p class="overflowClip_2">全球专线加速，玩出超快感</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+				   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.4399.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcff384487.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>4399</strong></a>
+				   <p class="overflowClip_2">小游戏,4399小游戏,小游戏大全,双人小游戏</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://www.7k7k.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcff2d32e3.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>7k7k</strong></a>
+				   <p class="overflowClip_2">小游戏,7k7k小游戏,小游戏大全,双人小游戏</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.3dmgame.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcff2175f0.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>3DM游戏网</strong></a>
+				   <p class="overflowClip_2">单机游戏_单机游戏下载_单机游戏大全中文版下载</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.gamersky.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dcff20e2e9.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>游民星空</strong></a>
+				   <p class="overflowClip_2">大型单机游戏门户 提供特色单机游戏资讯、下载</p>
 				  </div>
 				 </div>
 				</div>
