--- a/index.html
+++ b/index.html
@@ -294,17 +294,6 @@
 				 </div>
 				</div>
 			   </div>
-			 <!-- <div class="col-sm-3">
-				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://fanyi.baidu.com/&quot;,&quot;_blank&quot;)" >
-				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c7662e79.png" class="img-circle" width="40" /></a>
-				  <div class="xe-comment">
-				   <a href="#" class="xe-user-name overflowClip_1"><strong>百度翻译</strong></a>
-				   <p class="overflowClip_2">200多种语言互译 | 多模态 | 多领域</p>
-				  </div>
-				 </div>
-				</div>
-			   </div> -->
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://aliyundrive.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
@@ -338,24 +327,13 @@
 				 </div>
 				</div> 
 			   </div>
-			   <!-- <div class="col-sm-3">
-				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://support.hp.com/cn-zh/drivers/selfservice/hp-probook-455r-g6-notebook-pc/26575331/model/26575337?sku=6YF48PC&quot;,&quot;_blank&quot;)" >
-				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="hp.png" class="img-circle" width="40" /></a>
-				  <div class="xe-comment">
-				   <a href="#" class="xe-user-name overflowClip_1"><strong>驱动支持</strong></a>
-				   <p class="overflowClip_2">HP ProBook 455R G6 笔记本电脑 软件与驱动</p>
-				  </div>
-				 </div>
-				</div>
-			   </div> -->
 			   <div class="col-sm-3">
-				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://greasyfork.org/&quot;,&quot;_blank&quot;)" >
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://mp.weixin.qq.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c11210d9c8.png" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dd451df5e4.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
-				   <a href="#" class="xe-user-name overflowClip_1"><strong>Greasy Fork</strong></a>
-				   <p class="overflowClip_2">安全、实用的用户脚本大全</p>
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>微信公众平台</strong></a>
+				   <p class="overflowClip_2">content="给个人、企业和组织提供业务服务与用户管理能力的全新服务平台"</p>
 				  </div>
 				 </div>
 				</div>
@@ -406,17 +384,6 @@
 					 </div>
 					</div>
 				   </div>
-			   <!-- <div class="col-sm-3">
-				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://jiling.ink/wkll.php/&quot;,&quot;_blank&quot;)" >
-				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c7267c78.ico" class="img-circle" width="40" /></a>
-				  <div class="xe-comment">
-				   <a href="#" class="xe-user-name overflowClip_1"><strong>流量查询</strong></a>
-				   <p class="overflowClip_2">流量查询·Cookies获取</p>
-				  </div>
-				 </div>
-				</div>
-			   </div> -->
 		   <div class="col-sm-3">
 			  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://192.168.2.1/&quot;,&quot;_blank&quot;)">
 			   <div class="xe-comment-entry">
@@ -472,57 +439,13 @@
 				 </div>
 				</div>
 			   </div>
-				<!--  <div class="col-sm-3">
-				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yuque.com/docs/share/10b74d2e-5c24-4bd3-aafd-734d98495b07?# 《作文模板》&quot;,&quot;_blank&quot;)">
-				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://gw.alipayobjects.com/zos/rmsportal/UTjFYEzMSYVwzxIGVhMu.png" class="img-circle" width="40" /></a>
-				  <div class="xe-comment">
-				   <a href="#" class="xe-user-name overflowClip_1"><strong>英语作文模板</strong></a>
-				   <p class="overflowClip_2">语雀-专业的云端知识库</p>
-				  </div>
-				 </div>
-				</div>
-			   </div>
-	  	 <div class="col-sm-3">
-		  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yuque.com/docs/share/c98c1cb4-0caa-494e-b22a-8c8a3b8687b1?# 《毛中特课后题答案目录》&quot;,&quot;_blank&quot;)">
-	  	 	<div class="xe-comment-entry">
-			<a class="xe-user-img"><img src="https://gw.alipayobjects.com/zos/rmsportal/UTjFYEzMSYVwzxIGVhMu.png" class="img-circle" width="40" /></a>
-			<div class="xe-comment">
-			<a href="#" class="xe-user-name overflowClip_1"><strong>毛中特课后题答案</strong></a>
-		    <p class="overflowClip_2">语雀-专业的云端知识库</p>
-		</div>
-	   </div>
-	  </div>
-	 </div> -->
 	</div>
 			   
  <br />
 
 			<h4 class="text-gray"><i class="linecons-tag" style="margin-right:7px" id="学无止境"></i>学无止境</h4>
 			<div class="row">
-                <!-- <div class="col-sm-3">
-                 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://211.67.81.80/jwweb/index.aspx&quot;,&quot;_blank&quot;)" >
-                  <div class="xe-comment-entry">
-                   <a class="xe-user-img"><img src="https://tvax1.sinaimg.cn/crop.0.0.512.512.180/eb4b68b3ly8gdj1u3j5eyj20e80e8aao.jpg?KID=imgbed,tva&Expires=1605445613&ssig=NMedm3b8vM" class="img-circle" width="40" /></a>
-                   <div class="xe-comment">
-                    <a href="#" class="xe-user-name overflowClip_1"><strong>洛阳师范学院</strong></a>
-                    <p class="overflowClip_2">洛阳师范学院教务系统</p>
-                   </div>
-                  </div>
-                 </div>
-                </div>
-              <div class="col-sm-3">
-                 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://lynu.co.cnki.net/&quot;,&quot;_blank&quot;)" >
-                  <div class="xe-comment-entry">
-                   <a class="xe-user-img"><img src="https://tvax1.sinaimg.cn/crop.0.0.512.512.180/eb4b68b3ly8gdj1u3j5eyj20e80e8aao.jpg?KID=imgbed,tva&Expires=1605445613&ssig=NMedm3b8vM" class="img-circle" width="40" /></a>
-                   <div class="xe-comment">
-                    <a href="#" class="xe-user-name overflowClip_1"><strong>毕设管理</strong></a>
-                    <p class="overflowClip_2">大学生毕业论文（设计）管理系统</p>
-                   </div>
-                  </div>
-                 </div>
-				</div> -->
-				<div class="col-sm-3">
+		<div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://dxx.wwwtop.top/dxx_answer&quot;,&quot;_blank&quot;)" >
                      <div class="xe-comment-entry">
                       <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c124dd3afa.jpg" class="img-circle" width="40" /></a>
@@ -602,17 +525,6 @@
 					 </div>
 					</div>
 				   </div>
-			   <!-- <div class="col-sm-3">
-                 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://bm.scs.gov.cn/pp/gkweb/core/web/ui/business/home/gkhome.html&quot;,&quot;_blank&quot;)" >
-                  <div class="xe-comment-entry">
-                   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Yafine/cdn@3.3.3/source/box/images/logo/beian.png" class="img-circle" width="40" /></a>
-                   <div class="xe-comment">
-                    <a href="#" class="xe-user-name overflowClip_1"><strong>国家公务员局</strong></a>
-                    <p class="overflowClip_2">中央机关及其直属机构2021年度考试录用公务员专题</p>
-                   </div>
-                  </div>
-                 </div>
-                </div> -->
 				<div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://sls.cdb.com.cn&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
@@ -1169,39 +1081,6 @@
 			 </div>
 			</div>
 		   </div>
-		 <!-- <div class="col-sm-3">
-			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.mvcat.com/&quot;,&quot;_blank&quot;)" >
-			 <div class="xe-comment-entry">
-			  <a class="xe-user-img"><img src="ym.png" class="img-circle" width="40" /></a>
-			  <div class="xe-comment">
-			   <a href="#" class="xe-user-name overflowClip_1"><strong>影猫</strong></a>
-			   <p class="overflowClip_2">专门的电影推荐平台,通过收集经典电影,电影专题以及网友互动分享好看电影,为广大电影爱好者提供优质的电影推荐服务</p>
-			  </div>
-			 </div>
-			</div>
-		   </div>
-		   <div class="col-sm-3">
-			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://ifkdy.com/&quot;,&quot;_blank&quot;)" >
-			 <div class="xe-comment-entry">
-			  <a class="xe-user-img"><img src="fkys.ico" class="img-circle" width="40" /></a>
-			  <div class="xe-comment">
-			   <a href="#" class="xe-user-name overflowClip_1"><strong>疯狂影视</strong></a>
-			   <p class="overflowClip_2">电影搜索，一站拥有无尽影音视听</p>
-			  </div>
-			 </div>
-			</div>
-		   </div>
-		   <div class="col-sm-3">
-			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://czjx8.com/&quot;,&quot;_blank&quot;)" >
-			 <div class="xe-comment-entry">
-			  <a class="xe-user-img"><img src="spjx.png" class="img-circle" width="40" /></a>
-			  <div class="xe-comment">
-			   <a href="#" class="xe-user-name overflowClip_1"><strong>船长解析</strong></a>
-			   <p class="overflowClip_2">免费全网影视VIP视频vip会员免广告看电影</p>
-			  </div>
-			 </div>
-			</div>
-		   </div> -->
 		   <div class="col-sm-3">
 			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.ygdy8.com/&quot;,&quot;_blank&quot;)" >
 			 <div class="xe-comment-entry">
@@ -1213,17 +1092,6 @@
 			 </div>
 			</div>
 		   </div>
-	<!-- 	   <div class="col-sm-3">
-			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://tv.syrme.top/&quot;,&quot;_blank&quot;)" >
-			 <div class="xe-comment-entry">
-			  <a class="xe-user-img"><img src="jianying.png" class="img-circle" width="40" /></a>
-			  <div class="xe-comment">
-			   <a href="#" class="xe-user-name overflowClip_1"><strong>简影</strong></a>
-			   <p class="overflowClip_2">免费在线看剧观影网站</p>
-			  </div>
-			 </div>
-			</div>
-		   </div> -->
 		   <div class="col-sm-3">
 			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.cupfox.com/&quot;,&quot;_blank&quot;)" >
 			 <div class="xe-comment-entry">
