--- a/index.html
+++ b/index.html
@@ -50,17 +50,6 @@
 	<!-- <link rel="stylesheet" href="..\cdn\box/assets/css/xenon-core3.css">  -->
 	<!-- <link rel="stylesheet" href="..\cdn\box/assets/css/nav.css">  -->
 	<!-- <link rel="stylesheet" href="..\cdn\box/assets/css/bootstrap.css">  -->
-    <!-- <meta property="og:type" content="article">
-    <meta property="og:url" content="http://jintaovo.cn/">
-    <meta property="og:title" content="jintaovo.cn,收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。jintaovo.cn">
-    <meta property="og:description" content="jintaovo.cn,UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,jintaovo.cn">
-    <meta property="og:image" content="https://bu.dusays.com/2022/08/29/630c8a8dd7b85.png">
-    <meta property="og:site_name" content="jintaovo.cn,收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。jintaovo.cn"> -->
-    <!-- / Twitter Cards -->
-    <!-- <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="jintaovo.cn,收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。jintaovo.cn">
-    <meta name="twitter:description" content="jintaovo.cn,UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,jintaovo.cn">
-    <meta name="twitter:image" content="https://bu.dusays.com/2022/08/29/630c8a8dd7b85.png"> -->
 </head>
 
 <body class="page-body">
@@ -333,7 +322,7 @@
 				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dd451df5e4.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>微信公众平台</strong></a>
-				   <p class="overflowClip_2">content="给个人、企业和组织提供业务服务与用户管理能力的全新服务平台"</p>
+				   <p class="overflowClip_2">给个人、企业和组织提供业务服务与用户管理能力的全新服务平台</p>
 				  </div>
 				 </div>
 				</div>
