--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://mp.weixin.qq.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dd451df5e4.png" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/30/630dd7403dfc7.ico" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>微信公众平台</strong></a>
 				   <p class="overflowClip_2">给个人、企业和组织提供业务服务与用户管理能力的全新服务平台</p>
