--- a/index.html
+++ b/index.html
@@ -883,6 +883,17 @@
 				 </div>
 				</div>
 			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.mygraphpaper.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/09/01/63101bb70551e.jpg" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>图形方格纸</strong></a>
+				   <p class="overflowClip_2">content="快速生成各类稿纸格纸"</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
 
 
 		</div>
