--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/09/01/63101bb70551e.jpg" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>图形方格纸</strong></a>
-				   <p class="overflowClip_2">content="快速生成各类稿纸格纸"</p>
+				   <p class="overflowClip_2">快速生成各类稿纸格纸</p>
 				  </div>
 				 </div>
 				</div>
