--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 </header>
                 <ul id="main-menu" class="main-menu">
 					<li>
-                        <a href="#常用推荐" class="smooth">
-                            <i class="linecons-fire"></i>
-                            <span class="title">常用推荐</span>
+                        <a href="#" class="smooth" rel="go-top">
+                            <i class="linecons-search"></i>
+                            <span class="title">搜你所想</span>
                         </a>
 					</li>
 					<li>
@@ -112,7 +112,7 @@
 					</li>
 					<li>
                         <a href="#软件资源" class="smooth">
-                            <i class="linecons-search"></i>
+                            <i class="linecons-inbox"></i>
                             <span class="title">软件资源</span>
                         </a>
 					</li>
@@ -204,7 +204,7 @@
 				
                 <ul class="user-info-menu right-links list-inline list-unstyled">
 					<li class="hidden-sm hidden-xs">
-					 <a href="#"  >
+					 <a href="#" rel="go-top" >
 						 
 						<!-- 网页使用示例: -->
 						<p id="hitokoto">   ฅʕ•̫͡•ʔฅ ᑋᵉᑊᑊᵒ   </p>
